Spacing and Side Bar Fix

--- a/src/Components/MainLayout.razor.css
+++ b/src/Components/MainLayout.razor.css
@@ -20,13 +20,20 @@
         display: grid;
         grid-template-areas: "sidebar content";
         grid-template-columns: 1fr 5fr;
-        gap: 0rem;
+        gap: 1rem;
     }
 }
 
 #pages
 {
     grid-area: sidebar;
+    display: grid;
+    order: 1;
+    gap: inherit;
+    grid-template-areas: "pages";
+    grid-template-rows: 1fr;
+    border-radius:1rem;
+    box-shadow: 0 0 0 2px #000;
 }
 
 #content
@@ -38,6 +45,8 @@
     gap: inherit;
     grid-template-areas: "content";
     grid-template-rows: 1fr;
+    border-radius: 1rem;
+    box-shadow: 0 0 0 2px #000;
 }
 
 
@@ -56,7 +65,7 @@
         position: sticky;
         top: 5rem;
         display: block !important;
-        height: calc(100vh - 6rem);
+        height: calc(100vh - 5rem);
         padding-left: 0.25rem;
         margin-left: -0.25rem;
         overflow-y: auto;
