--- a/src/Components/SideBar.razor.css
+++ b/src/Components/SideBar.razor.css
@@ -44,6 +44,7 @@
         background-color: #B2B2B255;
         border-radius: 4px;
         height: 3rem;
+        padding: 0.5rem;
         display: flex;
         align-items: center;
         line-height: 3rem;
